src/objects/TopOpportunities__c.object
<CustomObject>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <description>Captures fleet size field from opportunity</description>
        <label>Fleet Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>This is the unique id of the Opportunity.  Like &quot;0067000000d8OKl&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the unique id of the Opportunity.  Like &quot;0067000000d8OKl&quot;</inlineHelpText>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Profile__c</fullName>
        <description>Text field for storing the partner profile name for administrative purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Text field for storing the partner profile name for administrative purposes</inlineHelpText>
        <label>Partner Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>This is the number that the list will sort on in Ascending order.</description>
        <inlineHelpText>This is the number that the list will sort on in Ascending order.</inlineHelpText>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Sort__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Partner_Profile__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SystemAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alon</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Profile__c</field>
            <operation>startsWith</operation>
            <value>Alon</value>
        </filters>
        <label>Alon</label>
    </listViews>
    <listViews>
        <fullName>Enterprise</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Profile__c</field>
            <operation>startsWith</operation>
            <value>Enterprise</value>
        </filters>
        <label>Enterprise</label>
    </listViews>
    <listViews>
        <fullName>Marathon</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Profile__c</field>
            <operation>startsWith</operation>
            <value>Marathon</value>
        </filters>
        <label>Marathon</label>
    </listViews>
    <listViews>
        <fullName>Phillips_66</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Profile__c</field>
            <operation>startsWith</operation>
            <value>Phillips</value>
        </filters>
        <label>Phillips 66</label>
    </listViews>
    <listViews>
        <fullName>QuikTrip</fullName>
        <columns>NAME</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Profile__c</field>
            <operation>startsWith</operation>
            <value>QuikTrip</value>
        </filters>
        <label>QuikTrip</label>
    </listViews>
</CustomObject>